Fix IE tip not showing bug and cleanup tip/core.js source.
Added new tooltipredraw(n) events, which are used to fix the IE
tip invisibility problem when using redraw(). Cleaned up core source
with common triggerEvent method to reduce code duplication and added
similar createVML method to tips.js to abstract that out.

Also changed the default vml namespace to qvml (from vml) and add default vml class
of .qtip-vml, which is now styled in tip.css to give it the default
VMML behavior. This prevents IE from not showing it if the tips are
for some reason removed/re-appended to the DOM.

--- a/src/tips/tips.css
+++ b/src/tips/tips.css
@@ -6,7 +6,7 @@
 }
 
 	.ui-tooltip .ui-tooltip-tip,
-	.ui-tooltip .ui-tooltip-tip *{
+	.ui-tooltip .ui-tooltip-tip .qtip-vml{
 		position: absolute;
 		
 		line-height: 0.1px !important;
@@ -19,4 +19,8 @@
 	
 	.ui-tooltip .ui-tooltip-tip canvas{ top: 0; left: 0; }
 
-
+	.ui-tooltip .ui-tooltip-tip .qtip-vml{
+		behavior: url(#default#VML);
+		display: inline-block;
+		visibility: visible;
+	}
